--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -19,15 +19,15 @@
 
 <div class="main">
     <!-- Block: login-container -->
-    <div class="registration-container form-container">
+    <div class="cse-motor__form-container form-container">
         <!-- Block: login-form -->
-        <form action="/account/register" method="post" class="registration-form">
+        <form action="/account/register" method="post" class="cse-motor__form" id="registrationForm">
             <!-- Block Element: login-form__container -->
-            <div class="registration-form__container">
+            <div class="cse-motor-form__container">
                 <fieldset>
                     <legend>Personal Information</legend>
                     <!-- Block Element: login-form__field -->
-                    <div class="registration-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="account_firstname" class="form__label">First Name:</label>
                         <!-- Element within Block: form__input -->
@@ -42,7 +42,7 @@
                     </div>
             
                     <!-- Block Element: login-form__field -->
-                    <div class="registration-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="account_lastname" class="form__label">Last Name:</label>
                         <!-- Element within Block: form__input -->
@@ -60,7 +60,7 @@
                 <fieldset>
                     <legend>Login Information</legend>
                     <!-- Block Element: login-form__field -->
-                    <div class="registration-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="account_email" class="form__label">Email:</label>
                         <!-- Element within Block: form__input -->
@@ -75,7 +75,7 @@
                     </div>
             
                     <!-- Block Element: login-form__field -->
-                    <div class="registration-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="account_password" class="form__label">Password:</label>
                         <!-- Element within Block: form__input -->
