--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -23,15 +23,15 @@
 
 <div class="main">
     <!-- Block: login-container -->
-    <div class="add-classification-container form-container">
+    <div class="cse-motor__form-container form-container">
         <!-- Block: login-form -->
-        <form action="/inv/add-classification" method="post" class="add-classification-form">
+        <form action="/inv/add-classification" method="post" class="cse-motor__form">
             <!-- Block Element: login-form__container -->
-            <div class="add-classification-form__container">
+            <div class="cse-motor-form__container">
                 <fieldset>
                     <legend>Classification Information</legend>
                     <!-- Block Element: login-form__field -->
-                    <div class="add-classification-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="classification_name" class="form__label">Classification Name:</label>
                         <!-- Element within Block: form__input -->
