--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -23,15 +23,15 @@
 
 <div class="main">
     <!-- Block: login-container -->
-    <div class="add-inventory-container form-container">
+    <div class="cse-motor__form-container form-container">
         <!-- Block: login-form -->
-        <form action="/inv/add-inventory" method="post" class="add-inventory-form">
+        <form action="/inv/add-inventory" method="post" class="cse-motor__form" id="addForm">
             <!-- Block Element: login-form__container -->
-            <div class="add-inventory-form__container">
+            <div class="cse-motor-form__container">
                 <fieldset>
                     <legend>Classification Information</legend>
 
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="classification_name" class="form__label">Classification Name:</label>
                         <%- classificationList %>
@@ -41,7 +41,7 @@
                 <fieldset>
                     <legend>Inventory Details</legend>
 
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_make" class="form__label">Make:</label>
                         <input
@@ -56,7 +56,7 @@
                         />
                     </div>
     
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_model" class="form__label">Model:</label>
                         <input
@@ -71,7 +71,7 @@
                         />
                     </div>
     
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_year" class="form__label">Year:</label>
                         <input
@@ -86,7 +86,7 @@
                         />
                     </div>
     
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_description" class="form__label">Description:</label>
                         <textarea
@@ -98,7 +98,7 @@
                         ></textarea>
                     </div>
     
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_image" class="form__label">Image:</label>
                         <input
@@ -111,7 +111,7 @@
                         />
                     </div>
     
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_thumbnail" class="form__label">Thumbnail:</label>
                         <input
@@ -124,7 +124,7 @@
                         />
                     </div>
     
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_price" class="form__label">Price:</label>
                         <input
@@ -139,7 +139,7 @@
                         />
                     </div>
     
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_color" class="form__label">Color:</label>
                         <input
@@ -154,7 +154,7 @@
                         />
                     </div>
     
-                    <div class="add-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_miles" class="form__label">Miles:</label>
                         <input
