--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -19,15 +19,15 @@
 
 <div class="main">
     <!-- Block: login-container -->
-    <div class="modify-inventory-container form-container">
+    <div class="cse-motor__form-container form-container">
         <!-- Block: login-form -->
-        <form action="/inv/update" method="post" class="update-inventory-form" id="updateForm">
+        <form action="/inv/update" method="post" class="cse-motor__form" id="updateForm">
             <!-- Block Element: login-form__container -->
-            <div class="modify-inventory-form__container">
+            <div class="cse-motor-form__container">
                 <fieldset>
                     <legend>Update Classification Info</legend>
 
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="classification_name" class="form__label">Classification Name:</label>
                         <%- classificationList %>
@@ -37,7 +37,7 @@
                 <fieldset>
                     <legend>Update Inventory Details</legend>
 
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_make" class="form__label">Make:</label>
                         <input
@@ -51,7 +51,7 @@
                         />
                     </div>
     
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_model" class="form__label">Model:</label>
                         <input
@@ -65,7 +65,7 @@
                         />
                     </div>
     
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_year" class="form__label">Year:</label>
                         <input
@@ -79,7 +79,7 @@
                         />
                     </div>
     
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_description" class="form__label">Description:</label>
                         <textarea
@@ -90,7 +90,7 @@
                         ><%= locals.inv_description %></textarea>
                     </div>
     
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_image" class="form__label">Image:</label>
                         <input
@@ -104,7 +104,7 @@
                         />
                     </div>
     
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_thumbnail" class="form__label">Thumbnail:</label>
                         <input
@@ -118,7 +118,7 @@
                         />
                     </div>
     
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_price" class="form__label">Price:</label>
                         <input
@@ -132,7 +132,7 @@
                         />
                     </div>
     
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_color" class="form__label">Color:</label>
                         <input
@@ -146,7 +146,7 @@
                         />
                     </div>
     
-                    <div class="modify-inventory-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="inv_miles" class="form__label">Miles:</label>
                         <input
