--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -9,15 +9,15 @@
 
 <div class="main">
     <!-- Block: login-container -->
-    <div class="login-container form-container">
+    <div class="cse-motor__form-container form-container">
         <!-- Block: login-form -->
-        <form action="/account/login" method="POST" class="login-form">
+        <form action="/account/login" method="POST" class="cse-motor__form" id="loginForm">
             <!-- Block Element: login-form__container -->
-            <div class="login-form__container">
+            <div class="cse-motor-form__container">
                 <fieldset>
                     <legend>Login Information</legend>
                     <!-- Block Element: login-form__field -->
-                    <div class="login-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="account_email" class="form__label">Email:</label>
                         <!-- Element within Block: form__input -->
@@ -25,7 +25,7 @@
                     </div>
 
                     <!-- Block Element: login-form__field -->
-                    <div class="login-form__field">
+                    <div class="cse-motor-form__field">
                         <!-- Element within Block: form__label -->
                         <label for="account_password" class="form__label">Password:</label>
                         <!-- Element within Block: form__hint -->
