--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -18,19 +18,14 @@
 </div>
 
 <div class="main">
-    <!-- Block: login-container -->
     <div class="cse-motor__form-container form-container">
-        <!-- Block: login-form -->
         <form action="/account/register" method="post" class="cse-motor__form" id="registrationForm">
-            <!-- Block Element: login-form__container -->
             <div class="cse-motor-form__container">
                 <fieldset>
                     <legend>Personal Information</legend>
-                    <!-- Block Element: login-form__field -->
+
                     <div class="cse-motor-form__field">
-                        <!-- Element within Block: form__label -->
                         <label for="account_firstname" class="form__label">First Name:</label>
-                        <!-- Element within Block: form__input -->
                         <input 
                             type="text" 
                             placeholder="Enter your first name" 
@@ -41,11 +36,8 @@
                         >
                     </div>
             
-                    <!-- Block Element: login-form__field -->
                     <div class="cse-motor-form__field">
-                        <!-- Element within Block: form__label -->
                         <label for="account_lastname" class="form__label">Last Name:</label>
-                        <!-- Element within Block: form__input -->
                         <input 
                             type="text" 
                             placeholder="Enter your last name" 
@@ -59,11 +51,9 @@
 
                 <fieldset>
                     <legend>Login Information</legend>
-                    <!-- Block Element: login-form__field -->
+
                     <div class="cse-motor-form__field">
-                        <!-- Element within Block: form__label -->
                         <label for="account_email" class="form__label">Email:</label>
-                        <!-- Element within Block: form__input -->
                         <input 
                             type="email" 
                             placeholder="Enter a valid email" 
@@ -74,12 +64,8 @@
                         >
                     </div>
             
-                    <!-- Block Element: login-form__field -->
                     <div class="cse-motor-form__field">
-                        <!-- Element within Block: form__label -->
                         <label for="account_password" class="form__label">Password:</label>
-                        <!-- Element within Block: form__input -->
-                        
                         <!--We always make the visitor re-type the password - Always!-->
                         <input 
                             type="password" 
@@ -90,18 +76,14 @@
                             required 
                             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
                             >
-                        <!-- Element within Block: form__hint -->
                         <span class="form__hint">Passwords must be at least 12 characters, contain at least 1 number, 1 capital letter, and 1 special character</span>
                     </div>
                 </fieldset>
+    
+                <button type="submit" class="form__button">Register Account</button>
         
-                <!-- Element within Block: btn -->
-                <button type="submit" class="form__button">Register</button>
-        
-                <!-- Element within Block: form__register -->
                 <span class="form__register form-footer-link"><div>Have an account? <a href="/account/login" class="form__login-link"> Login</a></div></span>
             </div>
         </form>
-        
     </div>
 </div>
