--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,22 @@
     <span class="header__title">
         <a href="/" title="Return to home page" class="header__title-link">CSE Motors</a>
     </span>
-    <div class="header__login">
-        <a title="Click to log in" href="/account/login" class="header__login-link">My Account</a>
+
+    <div class="right-side">
+        <% let account = locals.accountData %>
+
+        <% if (locals.loggedIn) { %>
+            <div class="header__welcome">
+                <a href="/account/" title="Account Management" class="header__welcome-link">Welcome <%= account.account_firstname %></a>
+            </div>
+        <% } %>
+
+        <div class="header__login">
+            <% if (locals.loggedIn) { %>
+                <a title="Click to log out" href="/account/logout" class="header__logout-link">Logout</a>
+            <% } else { %>
+                <a title="Click to log in" href="/account/login" class="header__login-link">My Account</a>
+            <% } %>
+        </div>
     </div>
-</header>
+</header
